[gd_scene load_steps=5 format=3 uid="uid://c7bc60tam17cx"]

[ext_resource type="Script" path="res://Scripts/SpellPrefabs/VineObject.gd" id="1_67mu6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nt652"]
height = 6.0
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mb62p"]
albedo_color = Color(0.345098, 1, 0.396078, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_qoo7f"]
material = SubResource("StandardMaterial3D_mb62p")
top_radius = 0.7
bottom_radius = 0.7
height = 6.0

[node name="Vine" type="Area3D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_67mu6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_nt652")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_qoo7f")

[node name="GroundCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
target_position = Vector3(0, -50, 0)
collide_with_areas = true
debug_shape_thickness = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
